# firestone-lib

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: pr.yml  publish.yml  python-package.yml
firestone_lib/: cli.py  resource.py  utils.py
firestone_lib/resources/logging/: cli.conf
test/: test_cli.py  test_resource.py  test_utils.py
